--- a/week2/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/week2/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,10 +1,10 @@
 <div class="row">
-    
-    <div class="container">
-        <div class="row">
-            <h1 class="col">Contacts</h1>
-            <button class="col btn btn-success">New Contact</button>
-        </div>
+    <div class="col-md-12">
+
+       
+            <div class="col-md-9"><h1>Contacts</h1></div>
+            <button class="col-md-3 pull-left btn btn-success">New Contact</button>
+        
     </div>
     <div class="row">
         <div class="col-xs-12">
