--- a/week4/cms/src/app/documents/documents.component.html
+++ b/week4/cms/src/app/documents/documents.component.html
@@ -4,6 +4,6 @@
     </div>
   
   <div class="col-md-4" >
-    <cms-document-detail [documentInput]="selectedDocument" ></cms-document-detail>
+    <cms-document-detail [documentInput]="selectedDocument" *ngIf="selectedDocument" ></cms-document-detail>
   </div>
   </div>
