--- a/week6/cms/src/app/documents/document-list/document-list.component.html
+++ b/week6/cms/src/app/documents/document-list/document-list.component.html
@@ -2,12 +2,12 @@
   <div class="panel-heading">
     <div class="row pad-left-right">
       <span class="pull-left title">Documents</span>
-      <a class="btn btn-success pull-right">Add Document</a>
+      <a class="btn btn-success pull-right" [routerLink]="['/documents/new']">Add Document</a>
     </div>
   </div>
   <div class="panel-body">
     <div class="center-panel" *ngFor="let document of documents">
-      <cms-document-item [document]="document" (click)="onSelectedDocument(document)"></cms-document-item>
+      <cms-document-item [document]="document" ></cms-document-item>
     </div>
   </div>
 
