--- a/week6/cms/src/app/documents/documents.component.html
+++ b/week6/cms/src/app/documents/documents.component.html
@@ -4,6 +4,7 @@
     </div>
   
   <div class="col-md-4" >
-    <cms-document-detail [documentInput]="selectedDocument" *ngIf="selectedDocument" ></cms-document-detail>
+    <!-- <cms-document-detail [documentInput]="selectedDocument" *ngIf="selectedDocument" ></cms-document-detail> -->
+    <router-outlet></router-outlet>
   </div>
   </div>
