--- a/week6/cms/src/app/contacts/contact-item/contact-item.component.html
+++ b/week6/cms/src/app/contacts/contact-item/contact-item.component.html
@@ -1,7 +1,5 @@
 <!--Repeated Contact Items-->
-<a href="#"  class="list-group-item clearfix">
-
-
+<a  [routerLink]="[contact.id]"  class="list-group-item clearfix">
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{ contact.name }}</h4>
         <!--p class="list-group-item-text">Description</p-->
