--- a/week6/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/week6/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -3,7 +3,7 @@
 
        
             <div class="col-md-9"><h1>Contacts</h1></div>
-            <button class="col-md-3 pull-left btn btn-success">New Contact</button>
+            <a class="col-md-3 pull-left btn btn-success" [routerLink]="['/Contacts/new']">New Contact</a>
         
     </div>
     <div class="row">
