--- a/week6/cms/src/app/documents/document-item/document-item.component.html
+++ b/week6/cms/src/app/documents/document-item/document-item.component.html
@@ -1,3 +1,3 @@
-<a class="list-group-item clearfix documentDiv" >
+<a class="list-group-item clearfix documentDiv" [routerLink]="[document.id]"  >
   {{document.name}}
 </a>
