--- a/week6/cms/src/app/header/header.component.html
+++ b/week6/cms/src/app/header/header.component.html
@@ -6,18 +6,18 @@
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#" (click)="onSelected('documents')">Documents</a></li>
-                <li><a href="#" (click)="onSelected('messages')">Messages</a></li>
-                <li><a href="#" (click)="onSelected('contacts')">Contacts</a></li>
+                <li routerLinkActive><a routerLink="/documents">Documents</a></li>
+                <li routerLinkActive><a routerLink="/messages">Messages</a></li>
+                <li routerLinkActive><a routerLink="/contacts">Contacts</a></li>
             </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown" appDropdown>
-                <a href="#" class="dropdown-toggle" role="button">User <span class="caret"></span></a>
+                <a  class="dropdown-toggle" role="button">User <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li>Save Data</li>
                     <li>Fetch Data</li>
                 </ul>
-              
+
             </li>
         </ul>
         </div>
